--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 asgiref==3.8.1
 attrs==23.2.0
+cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -12,11 +13,10 @@ django-rest-framework==0.1.0
 djangorestframework==3.15.2
 frozenlist==1.4.1
 future==1.0.0
-geocoder==1.38.1
 idna==3.7
+ipinfo==5.0.1
 multidict==6.0.5
 public-ip==0.12
-python-weather==2.0.3
 ratelim==0.1.6
 requests==2.32.3
 six==1.16.0
